syntax = "proto3";

option java_package = "dst.ass2.service.api.auth.proto";
option java_multiple_files = true;
option objc_class_prefix = "ATS";

package dst.ass2.service.api.auth.proto;

service AuthService {

  rpc authenticate(AuthenticationRequest) returns (AuthenticationResponse) {}

  rpc validateToken(TokenValidationRequest) returns (TokenValidationResponse) {}

}

message AuthenticationRequest {
  string email = 1;
  string password = 2;
}

message AuthenticationResponse {
  string token = 2;
}

message TokenValidationRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool valid = 1;
}
